# cosmotoolpy

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  setup.py
src/cosmotoolpy/: __init__.py  binning_correction.py  cpaint.pyx  cpower_spectrum_estimator.pyx  cpower_spectrum_estimator_half.pyx  fourier_basis.py  initial_condition.py  linear_growth_factor.py  paint.py  power_spectrum.py  power_spectrum_estimator.py  sigma_8.py  zeldovich_approximation.py
src/mycosmotoolpy/: binning_correction.py  cpaint_half.html  cpaint_half.pyx  cpower_spectrum_estimator_half.html  initial_condition.py  linear_growth_factor.py  paint.py  sigma_8.py
tests/: test.ipynb  test_cosmotoolpy.py
tests/fakedata_1.0000/fakedata_1.0000/1/: attr-v2
tests/fakedata_1.0000/fakedata_1.0000/1/ID/: 000000  header
tests/fakedata_1.0000/fakedata_1.0000/1/Position/: 000000  header
tests/fakedata_1.0000/fakedata_1.0000/1/Velocity/: 000000  header
tests/fakedata_1.0000/fakedata_1.0000/Header/: attr-v2  header
tests/fakedata_1.0000/fakedata_1.0000/LL-0.200/ID/: header
tests/fakedata_1.0000/fakedata_1.0000/LL-0.200/Length/: header
tests/fakedata_1.0000/fakedata_1.0000/LL-0.200/RVdisp/: header
tests/fakedata_1.0000/fakedata_1.0000/LL-0.200/Vdisp/: header
tests/fakedata_1.0000/fakedata_1.0000/LL-0.200/Velocity/: header
