[build-system]
requires = ["setuptools >= 61.0", "wheel", "Cython", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "cosmotoolpy"
version = "0.0.1"
description = "A tool package for cosmology research"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    { name = "Mengtian Jiang", email = "mengtian198@gmail.com" }
]
dependencies = ["scipy", "numpy", "Cython"]

[project.url]
Homepage = "https://github.com/jiangmengtian/cosmotoolpy"
Repository = "https://github.com/jiangmengtian/cosmotoolpy"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

